crates/sid-widgets/src/settings/snapshots/sid_widgets__settings__live_preview__tests__preview_dusk.snap
---
source: crates/sid-widgets/src/settings/live_preview.rs
expression: s
---
┌──────────────────────────────────────┐
│✦ dusk ✦                              │
│  primary accent row                  │
│  muted secondary text                │
│  success ok                          │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│Enter to apply  ·  Esc to cancel      │
└──────────────────────────────────────┘
