crates/sid-widgets/src/settings/snapshots/sid_widgets__settings__live_preview__tests__preview_void.snap
---
source: crates/sid-widgets/src/settings/live_preview.rs
expression: s
---
┌──────────────────────────────────────┐
│✦ void ✦                              │
│  primary accent row                  │
│  muted secondary text                │
│  success ok                          │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│Enter to apply  ·  Esc to cancel      │
└──────────────────────────────────────┘
